# Salt

./: Bullet.h  CMakeLists.txt  Components.h  Doc.md  Player.h  README.md  Salt.sln  SandBox.cpp  Systems.h  TODO.txt
Doc/: ECS.md
Salt/: CMakeLists.txt  Planet.h  Salt.cpp  Salt.h  Salt.vcxproj  Salt.vcxproj.filters  SandBox.cpp  TestSystem.h
Salt/Console/: CMakeLists.txt  Console.cpp  Console.h  ConsoleEntity.h
Salt/Console/ConsoleTools/: ConsoleEntity.cpp  ConsoleEntity.h  FPS_Counter.h
Salt/Core/: Application.cpp  CMakeLists.txt  Core.h  EntryPoint.cpp  EntryPoint.h
Salt/Core/Application/: Application.cpp  Application.h  CMakeLists.txt
Salt/Core/EntryPoint/: CMakeLists.txt
Salt/Core/Ticks/: CMakeLists.txt  Ticks.cpp  Ticks.h
Salt/Core/Window/: CMakeLists.txt
Salt/Doc/: Logging.md
Salt/ECS/: CMakeLists.txt  Component.h  ECS.h  ECS_params.h  Entity.h  System.cpp  System.h
Salt/Input/: CMakeLists.txt  Input.h  Keycodes.h  Mousecodes.h
Salt/Logging/: CMakeLists.txt  Logging.cpp  Logging.h
Salt/Renderer/: CMakeLists.txt  Camera.h  Camera3D(old).h  Color.h  Font.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Renderer_params.h  Sprite.h  Text.h  Texture - Copy.cpp  Texture.cpp  Texture.h  TextureManager.h
Salt/Renderer/Essentials/: Essentials.h  IndexBuffer.h  Shader.h  Vertex.h  VertexArray.h  VertexBuffer.h
Salt/Salt/: Salt.h
Salt/Salt/Core/: Application.cpp  Application.h  Clock.h  EntryPoint.h  Window.h
Salt/Salt/DataTypes/: DataTypes.h  NameID_Container.h  Pack_Container.h
Salt/Salt/ECS/: ECS.cpp  ECS.h  ECS_params.h
Salt/Salt/ECS/Component/: Component.cpp  Component.h  ComponentPack.cpp  ComponentPack.h  Field.h
Salt/Salt/ECS/Entity/: Entity.cpp  Entity.h  EntityPack.cpp  EntityPack.h
Salt/Salt/ECS/System/: System.cpp  System.h  SystemPack.cpp  SystemPack.h
Salt/Salt/Input/: Input.h  Keycodes.h  Mousecodes.h
Salt/Salt/Logging/: Logging.cpp  Logging.h
Salt/Salt/Renderer/: Renderer.cpp  Renderer.h
Salt/Salt/Renderer/Batch/: Batch.cpp  Batch.h  Quad.h
Salt/Salt/Renderer/Color/: Color.h
Salt/Salt/Renderer/Essentials/: Essentials.h  IndexBuffer.cpp  IndexBuffer.h  Shader.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Salt/Salt/Renderer/FontManager/: FontManager.cpp  FontManager.h
Salt/Salt/Renderer/TextureManager/: TextureManager.h
Salt/Salt/res/fonts/gohufont/: gohufont.txt
Salt/Salt/res/shaders/: batch.fs  batch.vs
Salt/UCSL/: CMakeLists.txt  Model.h  Readme.txt  Transformation.h  UCSL.cpp  ucsl.h
Salt/Utils/: CMakeLists.txt  Clock.h  Filework.h  ObjLoader.h  Utils.h
Salt/Utils/Containers/: Containers.h  NameID_Container.h  Pack_Container.h
Salt/Window/: CMakeLists.txt  Window.h
Salt/res/fonts/gohufont/: gohufont.txt
Salt/res/shaders/: default.fs  default.vs  text.fs  text.vs
